@@ -1,3 +1,7 @@
+12/31/12:
+	Improvements to device name loading
+	Disable signal handler for a bit
+
 12/28/12:
 	Minor fixes
 	Added basic groundwork for signal handler, needs work
